# project-3-group-GA-ATM

./: Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml
atmworks/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_rename_location_type_atm_location.py  0003_revenue.py  0004_atm_name.py  0005_rename_location_atm_location_type.py  0006_remove_revenue_yearly.py  0007_alter_revenue_options.py  0007_alter_revenue_options_cashinput.py  0008_alter_cashinput_date.py  0008_merge_20230109_1431.py  0009_alter_cashinput_date.py  0010_merge_20230109_1523.py  0011_address.py  0012_delete_address_atm_lat_atm_long_alter_atm_address.py
main_app/static/css/: style.css
main_app/templates/: about.html  base.html  home.html
main_app/templates/atms/: detail.html  index.html
main_app/templates/main_app/: atm_confirm_delete.html  atm_form.html  revenue_confirm_delete.html
main_app/templates/mapbox/: map.html
main_app/templates/registration/: login.html  signup.html
